Move state initialization out of SimulationEngine