@@ -7,9 +7,11 @@ import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.DynamicCell;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEngine;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationInstant;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.states.interfaces.State;
+import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.time.Instant;
 import gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.time.TimeUnit;
 import org.junit.Test;
 
+import java.util.Collections;
 import java.util.List;
 
 import static gov.nasa.jpl.ammos.mpsa.aerie.merlinsdk.engine.SimulationEffects.delay;
@@ -29,9 +31,16 @@ public class DataModelTest {
         public final BinModel bin_2 = new BinModel("Bin 2", instrument_c_data_rate, instrument_d_data_rate);
         public final BinModel bin_3 = new BinModel("Bin 3", instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate);
 
+        private final List<State<?>> stateList = List.of(
+            instrument_a_data_rate, instrument_b_data_rate, instrument_c_data_rate, instrument_d_data_rate,
+            instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate, bin_1, bin_2, bin_3);
+
+        public DataModelStates(final Instant startTime) {
+            for (final var state : this.stateList) state.initialize(startTime);
+        }
+
         public List<State<?>> getStateList() {
-            return List.of(instrument_a_data_rate, instrument_b_data_rate, instrument_c_data_rate, instrument_d_data_rate,
-                    instrument_e_data_rate, instrument_f_data_rate, instrument_g_data_rate, bin_1, bin_2, bin_3);
+            return Collections.unmodifiableList(this.stateList);
         }
     }
 
@@ -84,10 +93,10 @@ public class DataModelTest {
     @Test
     public void bin_initialization() {
         final var simStart = SimulationInstant.ORIGIN;
-        final var states = new DataModelStates();
+        final var states = new DataModelStates(simStart);
 
         statesRef.setWithin(states, () -> {
-            SimulationEngine.simulate(simStart, states.getStateList(), () -> {
+            SimulationEngine.simulate(simStart, () -> {
                 spawn(new InitBinDataVolumes());
             });
         });
@@ -96,10 +105,10 @@ public class DataModelTest {
     @Test
     public void turn_instrument_on(){
         final var simStart = SimulationInstant.ORIGIN;
-        final var states = new DataModelStates();
+        final var states = new DataModelStates(simStart);
 
         statesRef.setWithin(states, () -> {
-            SimulationEngine.simulate(simStart, states.getStateList(), () -> {
+            SimulationEngine.simulate(simStart, () -> {
                 spawn(new InitBinDataVolumes());
                 spawn(new TurnInstrumentAOn());
             });
@@ -109,10 +118,10 @@ public class DataModelTest {
     @Test
     public void downlink_data(){
         final var simStart = SimulationInstant.ORIGIN;
-        final var states = new DataModelStates();
+        final var states = new DataModelStates(simStart);
 
         statesRef.setWithin(states, () -> {
-            SimulationEngine.simulate(simStart, states.getStateList(), () -> {
+            SimulationEngine.simulate(simStart, () -> {
                 spawn(new InitBinDataVolumes());
                 spawn(new TurnInstrumentAOn());
                 spawn(new DownlinkData());
